--- a/src/style/sass/layouts/tempNow.scss
+++ b/src/style/sass/layouts/tempNow.scss
@@ -12,7 +12,7 @@
 
         background-image: url('../../assets/bgnuvem.jpg');
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         background-position: bottom;
 
         .head-tempNow {
@@ -100,7 +100,7 @@
         .foo-tempNow {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: center;    
           
             gap: 1rem;
 
