add: testes do primeiro theme

--- a/src/style/sass/components/themes/index.scss
+++ b/src/style/sass/components/themes/index.scss
@@ -1,6 +1,38 @@
+@import './dracula.scss';
+
 :root {
     --img-bg: url('../../assets/Background.png');
+    --img-bg-tempNow: url('../../assets/bgnuvem.jpg');
     --blur-bg: filter: blur(20px);
+
+    --bg-color: initial;
+    --bg-color-week: #6D67D0; 
+
+    --shawdow-b-week: initial;
+
+    --icon-head: #9D99E4;
+
+    --text-city: #C2BFF4;
+
+    --h1-temp: #FFFFFF;
+    --span-temp: #DAD8F7;
+    --p-temp: #FFFFFF;
+    --bg-statistics: rgba(102, 96, 200, 0.6);
+    --icon-statics: white;
+    --info-statics: #FFFFFF;
+    --span-info: #DAD8F7;
+
+    --icon-air-sun: #DAD8F7;
+    --head-air-sun: #E7E6FB;
+
+    --air-p-num: #87EBCD;
+    --air-strong-info: #E7E6FB;
+
+    --icon-main-sun: white;
+
+    --h3-days: #DAD8F7;
+    --foo-p-days: #FFFFFF;
+    --s-foo-days:#DAD8F7;
 }
 
 
@@ -10,5 +42,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+
+    background-color: var(--bg-color);
 
 }
