--- a/src/style/sass/layouts/tempNow.scss
+++ b/src/style/sass/layouts/tempNow.scss
@@ -10,7 +10,7 @@
         flex-direction: column;
         justify-content: space-between;
 
-        background-image: url('../../assets/bgnuvem.jpg');
+        background-image: var(--img-bg-tempNow);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom;
@@ -45,8 +45,16 @@
                 top: 33px;
                 right: 32px;
 
+                .icon-city {
+                    svg {
+                        path {
+                            fill: var(--icon-head);
+                        }
+                    }
+                }
+
                 .text-city {
-                    color: #C2BFF4;
+                    color: var(--text-city);
                     @include font-14;    
                 }
             }
@@ -65,7 +73,7 @@
                     height: 10.6rem;
 
                     .h1-temp {
-                        color: #FFFFFF;
+                        color: var(--h1-temp);
                         margin: 0;
                         padding: 0;
 
@@ -78,7 +86,7 @@
                         
 
                         .span-temp {
-                            color: #DAD8F7;
+                            color: var(--span-temp);
 
                             @include font-24;
                         }
@@ -86,7 +94,7 @@
                 }
 
                 .p-temp {
-                    color: #FFFFFF;
+                    color: var(--p-temp);
 
                     @include font-20;
 
@@ -110,7 +118,7 @@
                 // width: 14rem;
                 // height: 6rem;
                 
-                background: rgba(102, 96, 200, 0.6);
+                background-color: var(--bg-statistics);
                 border-radius: 6px;
 
                 display: flex;
@@ -119,13 +127,21 @@
                 gap: 1rem;
                 padding: 1rem;
 
+                .icon-statics {
+                    svg {
+                        path {
+                            fill: var(--icon-statics);
+                        }
+                    }
+                }
+
                 .info-statics {
-                    color: #FFFFFF;
+                    color: var(--info-statics);
 
                     @include font-12;
 
                     span {
-                        color: #DAD8F7;
+                        color: var(--info-span);
 
                         
                     }
