--- a/src/style/sass/utils/index.scss
+++ b/src/style/sass/utils/index.scss
@@ -1,6 +1,8 @@
 %week {
-    background-color: #6D67D0;
+    background-color: var(--bg-color-week);
     border-radius: 10px;
+
+    box-shadow: 2px 2px 10px var(--shawdow-b-week);
 }
 
 @mixin flexEixoX {
