--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -9,9 +9,55 @@ html {
   box-sizing: border-box;
 }
 
+body.dracula {
+  --img-bg: initial;
+  --img-bg-tempNow: initial;
+  --bg-color: #262626;
+  --bg-color-week: #282A36;
+  --shawdow-b-week: #9B6BDF;
+  --icon-head: #50FA7B;
+  --text-city: #E356A7;
+  --h1-temp: #F1FA8C;
+  --span-temp: #42E66C;
+  --p-temp: #E4F34A;
+  --bg-statistics: transparent;
+  --icon-statics: #EFA554;
+  --info-statics: #8BE9FD;
+  --span-info: #75D7EC;
+  --icon-air-sun: #50FA7B;
+  --head-air-sun: #E356A7;
+  --air-p-num: #42E66C;
+  --air-strong-info: #F1FA8C;
+  --icon-main-sun: #E64747;
+  --h3-days: #FFB86C;
+  --foo-p-days: #75D7EC;
+  --s-foo-days: #FF5555;
+}
+
 :root {
   --img-bg: url("../../assets/Background.png");
+  --img-bg-tempNow: url("../../assets/bgnuvem.jpg");
   --blur-bg: filter: blur(20px);
+  --bg-color: initial;
+  --bg-color-week: #6D67D0;
+  --shawdow-b-week: initial;
+  --icon-head: #9D99E4;
+  --text-city: #C2BFF4;
+  --h1-temp: #FFFFFF;
+  --span-temp: #DAD8F7;
+  --p-temp: #FFFFFF;
+  --bg-statistics: rgba(102, 96, 200, 0.6);
+  --icon-statics: white;
+  --info-statics: #FFFFFF;
+  --span-info: #DAD8F7;
+  --icon-air-sun: #DAD8F7;
+  --head-air-sun: #E7E6FB;
+  --air-p-num: #87EBCD;
+  --air-strong-info: #E7E6FB;
+  --icon-main-sun: white;
+  --h3-days: #DAD8F7;
+  --foo-p-days: #FFFFFF;
+  --s-foo-days:#DAD8F7;
 }
 
 body {
@@ -20,11 +66,13 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
+  background-color: var(--bg-color);
 }
 
 .container .week {
-  background-color: #6D67D0;
+  background-color: var(--bg-color-week);
   border-radius: 10px;
+  box-shadow: 2px 2px 10px var(--shawdow-b-week);
 }
 
 .container {
@@ -40,7 +88,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-image: url("../../assets/bgnuvem.jpg");
+  background-image: var(--img-bg-tempNow);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
@@ -68,8 +116,11 @@ body {
   top: 33px;
   right: 32px;
 }
+.container .tempNow .head-tempNow .city .icon-city svg path {
+  fill: var(--icon-head);
+}
 .container .tempNow .head-tempNow .city .text-city {
-  color: #C2BFF4;
+  color: var(--text-city);
   font-family: "Fira Code", monospace;
   font-size: 1.4rem;
   font-weight: 700;
@@ -87,7 +138,7 @@ body {
   height: 10.6rem;
 }
 .container .tempNow .main-tempNow .temperature .div-temperature .h1-temp {
-  color: #FFFFFF;
+  color: var(--h1-temp);
   margin: 0;
   padding: 0;
   font-family: "Fira Code", monospace;
@@ -98,13 +149,13 @@ body {
   gap: 1rem;
 }
 .container .tempNow .main-tempNow .temperature .div-temperature .h1-temp .span-temp {
-  color: #DAD8F7;
+  color: var(--span-temp);
   font-family: "Fira Code", monospace;
   font-weight: 700;
   font-size: 2.4rem;
 }
 .container .tempNow .main-tempNow .temperature .p-temp {
-  color: #FFFFFF;
+  color: var(--p-temp);
   font-family: "Fira Code", monospace;
   font-style: normal;
   font-weight: 700;
@@ -119,22 +170,25 @@ body {
   padding: 1rem;
 }
 .container .tempNow .foo-tempNow .statistics {
-  background: rgba(102, 96, 200, 0.6);
+  background-color: var(--bg-statistics);
   border-radius: 6px;
   display: flex;
   align-items: center;
   gap: 1rem;
   padding: 1rem;
 }
+.container .tempNow .foo-tempNow .statistics .icon-statics svg path {
+  fill: var(--icon-statics);
+}
 .container .tempNow .foo-tempNow .statistics .info-statics {
-  color: #FFFFFF;
+  color: var(--info-statics);
   font-family: "Fira Code", monospace;
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
 }
 .container .tempNow .foo-tempNow .statistics .info-statics span {
-  color: #DAD8F7;
+  color: var(--info-span);
 }
 .container .airQuality {
   grid-area: unset;
@@ -149,12 +203,15 @@ body {
   gap: 1rem;
   margin-top: 3.4rem;
 }
+.container .airQuality .head-air .icon-air svg path {
+  fill: var(--icon-air-sun);
+}
 .container .airQuality .head-air .h2-air {
   font-family: "Fira Code", monospace;
   font-style: normal;
   font-weight: 700;
   font-size: 1.6rem;
-  color: #E7E6FB;
+  color: var(--head-air-sun);
 }
 .container .airQuality .main-air {
   margin-top: -1.2rem;
@@ -164,14 +221,14 @@ body {
   font-style: normal;
   font-weight: 700;
   font-size: 1.8rem;
-  color: #87EBCD;
+  color: var(--air-p-num);
 }
 .container .airQuality .main-air .stg-main-air {
   font-family: "Lato";
   font-style: normal;
   font-weight: 700;
   font-size: 4rem;
-  color: #E7E6FB;
+  color: var(--air-strong-info);
 }
 .container .airQuality .numbers-air {
   width: 100%;
@@ -185,11 +242,11 @@ body {
   font-family: "Fira Code", monospace;
   font-size: 1.4rem;
   font-weight: 700;
-  color: #87EBCD;
+  color: var(--air-p-num);
 }
 .container .airQuality .numbers-air .info-num .span-info-num {
   text-align: center;
-  color: #E7E6FB;
+  color: var(--air-strong-info);
   font-family: "Fira Code", monospace;
   font-style: normal;
   font-weight: 400;
@@ -208,15 +265,21 @@ body {
   gap: 1rem;
   margin-top: 3.4rem;
 }
+.container .sunTime .head-sun .icon-sun svg path {
+  fill: var(--icon-air-sun);
+}
 .container .sunTime .head-sun .h2-sun {
   font-family: "Fira Code", monospace;
   font-style: normal;
   font-weight: 700;
   font-size: 1.6rem;
-  color: #E7E6FB;
+  color: var(--head-air-sun);
 }
 .container .sunTime .main-sun {
   margin-bottom: 1rem;
+}
+.container .sunTime .main-sun svg .icon-main-sun {
+  fill: var(--icon-main-sun);
 }
 .container .weekWeather {
   grid-area: unset;
@@ -233,20 +296,20 @@ body {
   font-family: "Fira Code", monospace;
   font-size: 1.4rem;
   font-weight: 700;
-  color: #DAD8F7;
+  color: var(--h3-days);
 }
 .container .weekWeather .days .foo-days .foo-p-days {
   font-family: "Fira Code", monospace;
   font-style: normal;
   font-weight: 700;
   font-size: 1.6rem;
-  color: #FFFFFF;
+  color: var(--foo-p-days);
 }
 .container .weekWeather .days .foo-days .foo-p-days .s-foo-days {
   font-family: "Fira Code", monospace;
   font-size: 1.4rem;
   font-weight: 700;
-  color: #DAD8F7;
+  color: var(--s-foo-days);
 }
 
 @media screen and (min-width: 880px) {
@@ -267,7 +330,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-image: url("../../assets/bgnuvem.jpg");
+    background-image: var(--img-bg-tempNow);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -295,8 +358,11 @@ body {
     top: 33px;
     right: 32px;
   }
+  .container .tempNow .head-tempNow .city .icon-city svg path {
+    fill: var(--icon-head);
+  }
   .container .tempNow .head-tempNow .city .text-city {
-    color: #C2BFF4;
+    color: var(--text-city);
     font-family: "Fira Code", monospace;
     font-size: 1.4rem;
     font-weight: 700;
@@ -314,7 +380,7 @@ body {
     height: 10.6rem;
   }
   .container .tempNow .main-tempNow .temperature .div-temperature .h1-temp {
-    color: #FFFFFF;
+    color: var(--h1-temp);
     margin: 0;
     padding: 0;
     font-family: "Fira Code", monospace;
@@ -325,13 +391,13 @@ body {
     gap: 1rem;
   }
   .container .tempNow .main-tempNow .temperature .div-temperature .h1-temp .span-temp {
-    color: #DAD8F7;
+    color: var(--span-temp);
     font-family: "Fira Code", monospace;
     font-weight: 700;
     font-size: 2.4rem;
   }
   .container .tempNow .main-tempNow .temperature .p-temp {
-    color: #FFFFFF;
+    color: var(--p-temp);
     font-family: "Fira Code", monospace;
     font-style: normal;
     font-weight: 700;
@@ -346,22 +412,25 @@ body {
     padding: 1rem;
   }
   .container .tempNow .foo-tempNow .statistics {
-    background: rgba(102, 96, 200, 0.6);
+    background-color: var(--bg-statistics);
     border-radius: 6px;
     display: flex;
     align-items: center;
     gap: 1rem;
     padding: 1rem;
   }
+  .container .tempNow .foo-tempNow .statistics .icon-statics svg path {
+    fill: var(--icon-statics);
+  }
   .container .tempNow .foo-tempNow .statistics .info-statics {
-    color: #FFFFFF;
+    color: var(--info-statics);
     font-family: "Fira Code", monospace;
     font-style: normal;
     font-weight: 400;
     font-size: 1rem;
   }
   .container .tempNow .foo-tempNow .statistics .info-statics span {
-    color: #DAD8F7;
+    color: var(--info-span);
   }
   .container .airQuality {
     grid-area: air;
@@ -376,12 +445,15 @@ body {
     gap: 1rem;
     margin-top: 3.4rem;
   }
+  .container .airQuality .head-air .icon-air svg path {
+    fill: var(--icon-air-sun);
+  }
   .container .airQuality .head-air .h2-air {
     font-family: "Fira Code", monospace;
     font-style: normal;
     font-weight: 700;
     font-size: 1.6rem;
-    color: #E7E6FB;
+    color: var(--head-air-sun);
   }
   .container .airQuality .main-air {
     margin-top: -1.2rem;
@@ -391,14 +463,14 @@ body {
     font-style: normal;
     font-weight: 700;
     font-size: 1.8rem;
-    color: #87EBCD;
+    color: var(--air-p-num);
   }
   .container .airQuality .main-air .stg-main-air {
     font-family: "Lato";
     font-style: normal;
     font-weight: 700;
     font-size: 4rem;
-    color: #E7E6FB;
+    color: var(--air-strong-info);
   }
   .container .airQuality .numbers-air {
     width: 100%;
@@ -412,11 +484,11 @@ body {
     font-family: "Fira Code", monospace;
     font-size: 1.4rem;
     font-weight: 700;
-    color: #87EBCD;
+    color: var(--air-p-num);
   }
   .container .airQuality .numbers-air .info-num .span-info-num {
     text-align: center;
-    color: #E7E6FB;
+    color: var(--air-strong-info);
     font-family: "Fira Code", monospace;
     font-style: normal;
     font-weight: 400;
@@ -435,15 +507,21 @@ body {
     gap: 1rem;
     margin-top: 3.4rem;
   }
+  .container .sunTime .head-sun .icon-sun svg path {
+    fill: var(--icon-air-sun);
+  }
   .container .sunTime .head-sun .h2-sun {
     font-family: "Fira Code", monospace;
     font-style: normal;
     font-weight: 700;
     font-size: 1.6rem;
-    color: #E7E6FB;
+    color: var(--head-air-sun);
   }
   .container .sunTime .main-sun {
     margin-bottom: 1rem;
+  }
+  .container .sunTime .main-sun svg .icon-main-sun {
+    fill: var(--icon-main-sun);
   }
   .container .weekWeather {
     grid-area: week;
@@ -460,20 +538,20 @@ body {
     font-family: "Fira Code", monospace;
     font-size: 1.4rem;
     font-weight: 700;
-    color: #DAD8F7;
+    color: var(--h3-days);
   }
   .container .weekWeather .days .foo-days .foo-p-days {
     font-family: "Fira Code", monospace;
     font-style: normal;
     font-weight: 700;
     font-size: 1.6rem;
-    color: #FFFFFF;
+    color: var(--foo-p-days);
   }
   .container .weekWeather .days .foo-days .foo-p-days .s-foo-days {
     font-family: "Fira Code", monospace;
     font-size: 1.4rem;
     font-weight: 700;
-    color: #DAD8F7;
+    color: var(--s-foo-days);
   }
 }
 
