--- a/src/style/sass/layouts/weekWeather.scss
+++ b/src/style/sass/layouts/weekWeather.scss
@@ -16,7 +16,7 @@
                 .h3-days {
                     @include font-14;
 
-                    color: #DAD8F7;
+                    color: var(--h3-days);
                 }
             }
 
@@ -25,11 +25,11 @@
                 .foo-p-days {
                     @include font-16;
 
-                    color: #FFFFFF;
+                    color: var(--foo-p-days);
 
                     .s-foo-days {
                         @include font-14;
-                        color: #DAD8F7;
+                        color: var(--s-foo-days);
                     }
                 }
             }
