--- a/src/style/sass/components/themes/index.scss
+++ b/src/style/sass/components/themes/index.scss
@@ -1,4 +1,5 @@
 @import './dracula.scss';
+@import './temaBlack.scss';
 
 :root {
     --img-bg: url('../../assets/Background.png');
@@ -46,3 +47,11 @@ body {
     background-color: var(--bg-color);
 
 }
+
+// $columns: 5;
+
+// @for $i from 1 through $columns {
+//     .columns-#{$i} {
+//         width: (100% / $i);
+//     }
+// }
