--- a/src/style/sass/components/themes/temaBlack.scss
+++ b/src/style/sass/components/themes/temaBlack.scss
@@ -3,7 +3,7 @@ body.temaBlack {
     --img-bg-tempNow: initial;
     --blur-bg: filter: blur(20px);
 
-    --bg-color: #000;
+    --bg-color: #000000f3;
     --bg-color-week: #212121; 
 
     --shawdow-b-week: initial;
