modified: modificações no index.html e styles css menu de selecionar temas

--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -175,6 +175,40 @@ body {
   background-color: var(--bg-color);
 }
 
+.selectTheme {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  height: 2.2rem;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+.selectTheme .iconTheme {
+  width: 22px;
+  height: 22px;
+}
+.selectTheme #select {
+  height: 100%;
+  background-color: #212121;
+  color: #DDD;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  font-family: "Fira Code", monospace;
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding: 3px 3px;
+}
+.selectTheme #select option {
+  font-family: "Fira Code", monospace;
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding: 3px 0px;
+  border: none;
+  outline: none;
+}
+
 .container .week {
   background-color: var(--bg-color-week);
   border-radius: 10px;
